--- a/index.html
+++ b/index.html
@@ -9,11 +9,40 @@
 </head>
 <body class="main">
 
-    <section class="hero">
-        <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.75/build/spline-viewer.js"></script>
-        <spline-viewer url="https://prod.spline.design/aBcRMcGXRuEC2psw/scene.splinecode"></spline-viewer>
+    <div class="header">
+        <div class="header__logo">
+            <svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 164 68">
+                <path fill="#fff" d="M61.624 60.212c-1.613 2.506.2 5.792 3.198 5.792h93.984c2.997 0 4.811-3.286 3.197-5.792L125.296 3.197c-1.492-2.317-4.903-2.317-6.395 0l-6.561 10.191a.803.803 0 0 1-1.351 0l-6.561-10.191c-1.492-2.317-4.903-2.317-6.395 0L61.624 60.212ZM5.44 1.995c-2.998 0-4.812 3.286-3.198 5.792l36.707 57.015c1.492 2.317 4.903 2.317 6.395 0L81.375 7.787c1.614-2.506-.2-5.792-3.197-5.792H5.439Z"/>
+            </svg>
+        </div>
 
+        <nav class="header__nav nav">
+            <ul class="nav__list">
+                <li class="nav__item nav__item_active"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Play</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Me</a></li>
+            </ul>
+        </nav>
+
+        <a href="#" class="header__link">Linkedin</a>
+    </div>
+
+    <section class="main__hero hero">
+        <div class="hero__3d">
+            <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.75/build/spline-viewer.js"></script>
+            <spline-viewer url="https://prod.spline.design/aBcRMcGXRuEC2psw/scene.splinecode"></spline-viewer>
+        </div>
+
+        <h1 class="hero__text">
+            <span class="hero__hello">Hi, I'm Vadik</span>
+            <span class="hero__h">An Amsterdam based Product Designer with a passion for</span>
+        </h1>
+        <ul class="hero__carousel">
+            <li class="hero__carousel-item"><span>smooth interactions</span></li>
+        </ul>
     </section>
+
+
 
     <div class="main__section">
 
