add hero text and carousel

--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
             <span class="hero__hello">Hi, I'm Vadik</span>
             <span class="hero__h">An Amsterdam based Product Designer with a passion for</span>
         </h1>
-        <ul class="hero__carousel">
-            <li class="hero__carousel-item"><span>smooth interactions</span></li>
-        </ul>
+        
+        <div class="hero__carousel">
+            <ul class="hero__carousel-list">
+                <li class="hero__carousel-item"><span>smooth interactions</span></li>
+                <li class="hero__carousel-item"><span>web design</span></li>
+                <li class="hero__carousel-item"><span>research and development</span></li>
+                <li class="hero__carousel-item"><span>fluid animations</span></li>
+                <li class="hero__carousel-item"><span>seamless UX and crisp UI</span></li>
+                <li class="hero__carousel-item" aria-hidden><span>smooth interactions</span></li>
+            </ul>
+        </div>
     </section>
 
 
