add picture style

--- a/index.html
+++ b/index.html
@@ -119,11 +119,19 @@
                 </ul>
             </div>
             
-            <div class="cases__pics">
-                <div class="cases__picture cases__picture_pl cases__picture_active"></div>
-                <div class="cases__picture cases__picture_pl2"></div>
-                <div class="cases__picture cases__picture_ya"></div>
-                <div class="cases__picture cases__picture_ya2"></div>
+            <div class="cases__pictures">
+                <div class="cases__pic cases__pic_pl cases__pic_active">
+                    <img src="./img/Listing.png" alt="">
+                </div>
+                <div class="cases__pic cases__pic_pl2">
+                    <img src="./img/Listing.png" alt="">
+                </div>
+                <div class="cases__pic cases__pic_ya">
+                    <img src="./img/Listing.png" alt="">
+                </div>
+                <div class="cases__pic cases__pic_ya2">
+                    <img src="./img/Listing.png" alt="">
+                </div>
             </div>
         </section>
 
