add basic layout for the play section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-    <div class="main__section">
+    <div class="main__cases">
 
         <section class="cases">
             <div class="cases__list-wrapper">
@@ -132,6 +132,27 @@
                 <div class="cases__pic cases__pic_ya2">
                     <img src="./img/Listing.png" alt="">
                 </div>
+            </div>
+        </section>
+
+    </div>
+
+    <div class="main__play">
+
+        <section class="play">
+            <div class="play__pictures">
+                <div class="play__pic">
+                    <img src="./img/play_2.jpg" alt="">
+                </div>
+                <div class="play__pic">
+                    <img src="./img/play_1.jpg" alt="">
+                </div>
+                <div class="play__pic">
+                    <img src="./img/play_3.jpg" alt="">
+                </div>
+                <a href="#" class="play__link">
+                    Play
+                </a>
             </div>
         </section>
 
