add the play section animations

--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
                     <img src="./img/play_3.jpg" alt="">
                 </div>
                 <a href="#" class="play__link">
-                    Play
+                    play
                 </a>
+                <p class="play__desc">Some fun stuff I do</p>
             </div>
         </section>
 
