--- a/index.html
+++ b/index.html
@@ -159,6 +159,38 @@
 
     </div>
 
+    <div class="footer">
+        <h2 class="footer__cta">
+            Don't hesitate. 
+            <a href="mailto:fooontic@gmail.com" class="footer__chat">Let's chat!</a>
+        </h2>
+
+        <div class="footer__about">
+            <p class="footer__madeby">
+                Designed and developed with vanilla web by Vadik Matveev
+            </p>
+
+            
+            <div class="footer__social">
+                <h4>Elsewhere</h4>
+                <ul class="footer__list">
+                    <li><a href="#" class="footer__link">Linkedin</a></li>
+                    <li><a href="#" class="footer__link">Codepen</a></li>
+                    <li><a href="#" class="footer__link">Dribbble</a></li>
+                </ul>
+            </div>
+            <div class="footer__email">
+                <h4>Contact</h4>
+                <ul class="footer__list">
+                    <li><a href="mailto:fooontic@gmail.com" class="footer__link">fooontic@gmail.com</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <p class="footer__copyright">© 2025</p>
+        
+    </div>
+
     <script type="module" src="./main.js"></script>
 
 </body>
