add paper airplane to footer link

--- a/index.html
+++ b/index.html
@@ -162,7 +162,12 @@
     <div class="footer">
         <h2 class="footer__cta">
             Don't hesitate. 
-            <a href="mailto:fooontic@gmail.com" class="footer__chat">Let's chat!</a>
+            <a href="mailto:fooontic@gmail.com" class="footer__chat">
+                Let's chat!
+                <i class="footer__plane">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70"><path  d="M24.172 45.966a2 2 0 0 0 .078 2.977L42.962 64.85a2 2 0 0 0 3.177-.846l19.365-53.662a1 1 0 0 0-1.21-1.303L2.462 26.33c-1.543.432-1.977 2.413-.756 3.45l15.222 12.94a2 2 0 0 0 2.45.108L51.637 20 24.172 45.966Z"/></svg>
+                </i>
+            </a>
         </h2>
 
         <div class="footer__about">
@@ -182,7 +187,9 @@
             <div class="footer__email">
                 <h4>Contact</h4>
                 <ul class="footer__list">
-                    <li><a href="mailto:fooontic@gmail.com" class="footer__link">fooontic@gmail.com</a></li>
+                    <li>
+                        <a href="mailto:fooontic@gmail.com" class="footer__link">fooontic@gmail.com</a>
+                    </li>
                 </ul>
             </div>
         </div>
