--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         
     </div>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./script.js"></script>
 
 </body>
 </html>
