add mobile header and hero screen

--- a/index.html
+++ b/index.html
@@ -135,9 +135,13 @@
             </div>
         </section>
 
+        <section class="cases_mobile">
+
+        </section>
+
     </div>
 
-    <div class="main__play">
+    <!-- <div class="main__play">
 
         <section class="play">
             <div class="play__pictures">
@@ -157,9 +161,9 @@
             </div>
         </section>
 
-    </div>
+    </div> -->
 
-    <div class="footer">
+    <!-- <div class="footer">
         <h2 class="footer__cta">
             Don't hesitate. 
             <a href="mailto:fooontic@gmail.com" class="footer__chat">
@@ -196,7 +200,7 @@
 
         <p class="footer__copyright">© 2025</p>
         
-    </div>
+    </div> -->
 
     <script type="module" src="./script.js"></script>
 
