add mobile styles for footer

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     </div> -->
 
-    <!-- <div class="footer">
+    <div class="footer">
         <h2 class="footer__cta">
             Don't hesitate. 
             <a href="mailto:fooontic@gmail.com" class="footer__chat">
@@ -257,7 +257,7 @@
 
         <p class="footer__copyright">© 2025</p>
         
-    </div> -->
+    </div>
 
     <script type="module" src="./script.js"></script>
 
