fix play on mobile

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     </div>
 
-    <!-- <div class="main__play">
+    <div class="main__play">
 
         <section class="play">
             <div class="play__pictures">
@@ -218,7 +218,7 @@
             </div>
         </section>
 
-    </div> -->
+    </div>
 
     <div class="footer">
         <h2 class="footer__cta">
