--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
             </div>
             
             <div class="cases__pictures">
-                <div class="cases__pic cases__pic_pl cases__pic_active">
-                    <img src="./img/Listing.png" alt="">
+                <div class="cases__pic cases__pic_active">
+                    <video class="cases__video cases__video_pl" autoplay muted>
+                        <source src="./img/resale.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="cases__pic cases__pic_pl2">
                     <img src="./img/Listing.png" alt="">
