add ticket select video

--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                     </video>
                 </div>
                 <div class="cases__pic cases__pic_pl2">
-                    <img src="./img/Listing.png" alt="">
+                    <video class="cases__video cases__video_pl" autoplay muted>
+                        <source src="./img/ticket-select.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="cases__pic cases__pic_ya">
                     <img src="./img/Listing.png" alt="">
@@ -143,7 +145,9 @@
                 <div class="cases__slider">
                     <a href="" class="cases__item">
                         <div class="cases__pic">
-                            <img src="./img/Listing.png" alt="">
+                            <video class="cases__video cases__video_pl" autoplay muted>
+                                <source src="./img/resale.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <h3 class="cases__name">Resale tickets</h3>
                         <div class="cases__info">
@@ -155,7 +159,9 @@
     
                     <a href="" class="cases__item">
                         <div class="cases__pic">
-                            <img src="./img/Listing.png" alt="">
+                            <video class="cases__video cases__video_pl" autoplay muted>
+                                <source src="./img/ticket-select.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <h3 class="cases__name">Improving sales funnel</h3>
                         <div class="cases__info">
