add resale intro

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="case" style="--case-bg-color: var(--cc-bg-case-1);">
+<body class="case case_resale resale" style="--case-bg-color: var(--cc-bg-case-1);">
     
     <div class="header">
         <div class="header__logo">
@@ -29,10 +29,34 @@
 
     <div class="case__toc toc"></div>
 
-    <section class="case__intro intro">
-        <div class="intro__company">Platinumlist app, 2024</div>
-        <h1 class="intro__h">In-app resale for concerts</h1>
-        <div class="intro__deck">Design a full resale feature flow from scratch to help users resell tickets fairly and intuitively</div>
-    </section>
+    <div class="case__body">
+        <section class="case__intro intro">
+            <div class="intro__desc">
+                <div class="intro__company">Platinumlist app, 2024</div>
+                <h1 class="intro__h">In-app <span class="case__alt-font">resale</span> for concerts</h1>
+                <div class="intro__deck">Design a full resale feature flow from scratch to help users resell tickets fairly and intuitively</div>
+            </div>
+    
+            <div class="intro__hero resale__intro">
+                <div class="intro__pic resale__pic">
+                    <img src="/img/cases/resale/Intro 01.jpg" alt="">
+                </div>
+                <div class="intro__pic resale__pic">
+                    <img src="/img/cases/resale/Intro 02.jpg" alt="">
+                </div>
+                <div class="intro__pic resale__pic">
+                    <video class="resale__video" autoplay muted>
+                        <source src="/img/resale.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="intro__pic resale__pic">
+                    <img src="/img/cases/resale/Intro 04.jpg" alt="">
+                </div>
+                <div class="intro__pic resale__pic">
+                    <img src="/img/cases/resale/Intro 05.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </div>
 
 </body>
