--- a/cases/resale.html
+++ b/cases/resale.html
@@ -29,11 +29,12 @@
 
     <div class="case__toc toc"></div>
 
-    <div class="case__body">
+    <article class="case__body">
+
         <section class="case__intro intro">
             <div class="intro__desc">
                 <div class="intro__company">Platinumlist app, 2024</div>
-                <h1 class="intro__h">In-app <span class="case__alt-font">resale</span> for concerts</h1>
+                <h1 class="intro__h">In-app <span class="case__alt-font">resale</span> for concerts</h1>
                 <div class="intro__deck">Design a full resale feature flow from scratch to help users resell tickets fairly and intuitively</div>
             </div>
     
@@ -57,6 +58,45 @@
                 </div>
             </div>
         </section>
-    </div>
+
+        <div class="case__summary">
+            <ul class="summary">
+                <li class="summary__item">
+                    <span class="summary__h">Company</span>
+                    <span class="summary__text"><a href="platinumlist.net">Platinumlist</a></span>
+                </li>
+                <li class="summary__item">
+                    <span class="summary__h">Timeline</span>
+                    <span class="summary__text">Summer 2024</span>
+                </li>
+                <li class="summary__item">
+                    <span class="summary__h">Fields</span>
+                    <ul>
+                        <li class="summary__text">Mobile app (iOS + Android)</li>
+                        <li class="summary__text">New Feature</li>
+                        <li class="summary__text">B2C, Ticketing platform</li>
+                    </ul>
+                </li>
+                <li class="summary__item">
+                    <span class="summary__h">My role</span>
+                    <span class="summary__text">Product Lead Designer</span>
+                </li>
+                <li class="summary__item summary__item_responsibilities">
+                    <span class="summary__h">Responsibilities</span>
+                    <ul>
+                        <li class="summary__text">Feature Scoping</li>
+                        <li class="summary__text">Research</li>
+                        <li class="summary__text">Prototyping</li>
+                        <li class="summary__text">Interaction & Visual Design</li>
+                        <li class="summary__text">Team Leading</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+
+        
+
+    </article>
 
 </body>
