--- a/cases/resale.html
+++ b/cases/resale.html
@@ -27,14 +27,23 @@
         <a href="#" class="header__link">Linkedin</a>
     </div>
 
-    <div class="case__toc toc"></div>
+    <nav class="case__toc toc">
+        <ol class="toc__list">
+            <li class="toc__item"><a href="#overview">Overview</a></li>
+            <li class="toc__item"><a href="#problem">The Problem</a></li>
+            <li class="toc__item"><a href="#preparation-and-research">Preparation and Research</a></li>
+            <li class="toc__item"><a href="#ideas-and-sketches">Early Ideas and Sketches</a></li>
+            <li class="toc__item"><a href="#design">Design</a></li>
+            <li class="toc__item"><a href="#results">Results and Impact</a></li>
+        </ol>
+    </nav>
 
     <article class="case__body">
 
         <section class="case__intro intro">
             <div class="intro__desc">
                 <div class="intro__company">Platinumlist app, 2024</div>
-                <h1 class="intro__h">In-app <span class="alt-font">resale</span> for concerts</h1>
+                <h1 class="intro__h" id="overview">In-app <span class="alt-font">resale</span> for concerts</h1>
                 <div class="intro__deck">Design a full resale feature flow from scratch to help users resell tickets fairly and intuitively</div>
             </div>
     
@@ -96,7 +105,7 @@
 
 
         <div class="case__text-box">
-            <h2 class="case__h2" id="problem">The problem</h2>
+            <h2 class="case__h2" id="problem">The Problem</h2>
             <p class="case__text">
                 Scalping is a major issue in ticketing: resellers buy up large quantities early and sell them later at inflated prices. This harms fans, ticket providers, and even artists — many of whom now avoid platforms that don’t address resale abuse.
             </p>
@@ -216,5 +225,8 @@
         </div>
 
     </article>
+    
+    <script type="module" src="./case.js"></script>
 
 </body>
+</html>
