add layout and style for switcher

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -126,6 +126,18 @@
             </p>
         </div>
 
+        <fieldset class="switcher">
+            <legend class="visually-hidden">Choose version</legend>
+            <label class="switcher__option">
+                <input class="switcher__input" type="radio" name="version" value="old" />
+                <span>Old</span>
+            </label>
+            <label class="switcher__option">
+                <input class="switcher__input" type="radio" name="version" value="new" checked />
+                <span>New</span>
+            </label>
+        </fieldset>
+
         <div class="case__text-box">
             <p class="case__text">
                 After syncing up with stakeholders and our product manager, I started digging into how competitors handled resale — plus a few ideas from other industries. Based on that, I mapped out a first version of the "perfect flow" — just the happy path, no edge cases yet.
