--- a/cases/resale.html
+++ b/cases/resale.html
@@ -167,6 +167,10 @@
             </p>
         </div>
 
+        <div class="case__container_l --map">
+            <img class="case__pic --map__pic" src="/img/cases/resale/resale-map.jpg" alt="">
+        </div>
+
         <div class="case__text-box">
             <p class="case__text">
                 When we walked through it as a team, we quickly spotted a few areas that needed more attention.
