add transfer tickets

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -141,22 +141,22 @@
             </fieldset>
     
             <div class="--tickets contentSwitcher__content">
-                <div class="--tickets__container --tickets__container_old contentSwitcher__choice" c-choice="1">
+                <figure class="--tickets__container --tickets__container_old contentSwitcher__choice" c-choice="1">
                     <div class="--tickets__item">
                         <img src="/img/cases/resale/old-ticket_1.jpg" alt="">
                     </div>
                     <div class="--tickets__item">
                         <img src="/img/cases/resale/old-ticket_2.jpg" alt="">
                     </div>
-                </div>
-                <div class="--tickets__container --tickets__container_new contentSwitcher__choice" c-choice="2">
+                </figure>
+                <figure class="--tickets__container --tickets__container_new contentSwitcher__choice" c-choice="2">
                     <div class="--tickets__item">
                         <img src="/img/cases/resale/new-ticket_1.jpg" alt="">
                     </div>
                     <div class="--tickets__item">
                         <img src="/img/cases/resale/new-ticket_2.jpg" alt="">
                     </div>
-                </div>
+                </figure>
             </div>
         </div>
 
@@ -167,9 +167,9 @@
             </p>
         </div>
 
-        <div class="case__container_l --map">
+        <figure class="case__container_l --map">
             <img class="case__pic --map__pic" src="/img/cases/resale/resale-map.jpg" alt="">
-        </div>
+        </figure>
 
         <div class="case__text-box">
             <p class="case__text">
@@ -188,6 +188,18 @@
             <p class="case__text">
                 One of the biggest UX challenges was making resale feel consistent with the ticket transfer flow we’d already launched — but resale needed way more information (like price settings for example). I needed a way to show all of it without making the screens feel cluttered.
             </p>
+        </div>
+
+        <div class="--tickets">
+            <figure class="--tickets__container">
+                <div class="--tickets__item">
+                    <img src="/img/cases/resale/transfer_1.jpg" alt="">
+                </div>
+                <div class="--tickets__item">
+                    <img src="/img/cases/resale/transfer_2.jpg" alt="">
+                </div>
+            </figure>
+            <figcaption class="case__caption">Ticket transfer screens that I wanted to use as a basis for consistency</figcaption>
         </div>
         
         <div class="case__text-box">
