--- a/cases/resale.html
+++ b/cases/resale.html
@@ -199,7 +199,7 @@
                     <img src="/img/cases/resale/transfer_2.jpg" alt="">
                 </div>
             </figure>
-            <figcaption class="case__caption">Ticket transfer screens that I wanted to use as a basis for consistency</figcaption>
+            <figcaption class="case__caption">Ticket transfer screens that I wanted to use as a basis for consistency</figcaption>
         </div>
         
         <div class="case__text-box">
@@ -214,6 +214,28 @@
                 <li>I wanted users to easily adjust prices, but without taking up tons of screen space.</li>
                 <li>I had to allow individual pricing for each ticket (since sometimes users bought them at different prices).</li>
             </ul>
+        </div>
+
+        <div class="--sketches">
+            <figure class="--sketches__container">
+                <div class="--sketches__col">
+                    <img src="/img/cases/resale/sketch_1.jpg" alt="">
+                </div>
+                <div class="--sketches__col">
+                    <img src="/img/cases/resale/sketch_2.jpg" alt="">
+                </div>
+                <div class="--sketches__col">
+                    <div class="--sketches__subitem">
+                        <img src="/img/cases/resale/sketch_3.jpg" alt="">
+                    </div>
+                    <div class="--sketches__subitem">
+                        <img src="/img/cases/resale/sketch_4.jpg" alt="">
+                    </div>
+                    <div class="--sketches__subitem">
+                        <img src="/img/cases/resale/sketch_5.jpg" alt="">
+                    </div>
+                </div>
+            </figure>
         </div>
         
         <div class="case__text-box">
