add resale tickets

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -253,6 +253,19 @@
                 While designing the screen, I had an idea to add simple animation with the "unfolding" ticket when users adjust the price. It gives additional visual visual hint that the price is editable.
             </p>
         </div>
+
+        <div class="case__container_m --rs-tickets">
+            <figure class="--rs-tickets__container">
+                <div class="--rs-tickets__video">
+                    <video class="case__pic" autoplay muted controls loop>
+                        <source src="/img/cases/resale/resale_tickets.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="--rs-tickets__pic">
+                    <img class="case__pic" src="/img/cases/resale/rs-tickets.jpg" alt="">
+                </div>
+            </figure>
+        </div>
         
         <div class="case__text-box">
             <p class="case__text">
