--- a/cases/resale.html
+++ b/cases/resale.html
@@ -275,6 +275,12 @@
                 For onboarding, I created a beatiful animation that made the resale flow feel more special and important.
             </p>
         </div>
+
+        <div class="--onboarding case__container_s">
+            <video class="case__pic" autoplay muted controls loop>
+                <source src="/img/cases/resale/resale_onboarding.mp4" type="video/mp4">
+            </video>
+        </div>
         
         <div class="case__text-box">
             <p class="case__text">
@@ -312,6 +318,7 @@
 
     </article>
     
+    <script src="/modernizr-custom.js"></script>
     <script type="module" src="./case.js"></script>
 
 </body>
