--- a/cases/resale.html
+++ b/cases/resale.html
@@ -290,6 +290,27 @@
                 We spent extra time polishing the microcopy too. The whole team helped rework the text several times to make sure it felt sharp, clear, and friendly.
             </p>
         </div>
+
+        <div class="--details case__container_l">
+            <figure class="--details__container">
+                <div class="--details__col">
+                    <img class="case__pic" src="/img/cases/resale/details_1.webp" alt="">
+                </div>
+                <div class="--details__col">
+                    <img class="case__pic" src="/img/cases/resale/details_2.1.webp" alt="">
+                    <img class="case__pic" src="/img/cases/resale/details_2.2.webp" alt="">
+                    <img class="case__pic" src="/img/cases/resale/details_2.3.webp" alt="">
+                </div>
+                <div class="--details__col">
+                    <img class="case__pic" src="/img/cases/resale/details_3.webp" alt="">
+                </div>
+                <div class="--details__col">
+                    <img class="case__pic" src="/img/cases/resale/details_4.1.webp" alt="">
+                    <img class="case__pic" src="/img/cases/resale/details_4.2.webp" alt="">
+                    <img class="case__pic" src="/img/cases/resale/details_4.3.webp" alt="">
+                </div>
+            </figure>
+        </div>
         
         <div class="case__text-box">
             <p class="case__text">
