add video with a prototype in a hand

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -168,7 +168,7 @@
         </div>
 
         <figure class="case__container_l --map">
-            <img class="case__pic --map__pic" src="/img/cases/resale/resale-map.jpg" alt="">
+            <img class="case__pic case__pic_rounded --map__pic" src="/img/cases/resale/resale-map.jpg" alt="">
         </figure>
 
         <div class="case__text-box">
@@ -262,7 +262,7 @@
                     </video>
                 </div>
                 <div class="--rs-tickets__pic">
-                    <img class="case__pic" src="/img/cases/resale/rs-tickets.jpg" alt="">
+                    <img class="case__pic case__pic_rounded" src="/img/cases/resale/rs-tickets.jpg" alt="">
                 </div>
             </figure>
         </div>
@@ -317,6 +317,13 @@
                 Even though we still didn’t have a final list of the data we needed to collect in the Withdrawal Request form, <span class="bold">I put together a working prototype</span> with a placeholder set of fields so we could test the full resale experience end-to-end. 
             </p>
         </div>
+
+        <figure class="case__container_m">
+            <video class="case__pic case__pic_rounded" preload="metadata" muted controls loop poster="/img/cases/resale/in_hands_poster.jpg">
+                <source src="/img/cases/resale/in_hands_comp.mp4" type="video/mp4">
+            </video>
+            <figcaption class="case__caption">This is the final version of Withdrawal Request form since the original prototype wasn't saved</figcaption>
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
