add all and form sections

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -330,11 +330,29 @@
                 <span class="bold">We ran a small round of user testing</span> — made a few tweaks based on feedback — and then I focused on filling in all the missing pieces: edge cases, skeleton screens, error states, Arabic localisation, Android version, everything. 
             </p>
         </div>
+
+        <figure class="--all case__container_l">
+            <img class="case__pic case__pic_rounded" src="/img/cases/resale/all_resale.webp" alt="">
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
                 Meanwhile, another designer on the team, working under my guidance, finalized the Withdrawal Request form once all the legal details came together.
             </p>
+        </div>
+
+        <div class="--form case_container_m">
+            <figure class="--form__container">
+                <div class="--form__item">
+                    <img src="/img/cases/resale/form_1.webp" alt="" class="case__pic case__pic_rounded">
+                </div>
+                <div class="--form__item">
+                    <img src="/img/cases/resale/form_2.webp" alt="" class="case__pic case__pic_rounded">
+                </div>
+                <div class="--form__item">
+                    <img src="/img/cases/resale/form_3.webp" alt="" class="case__pic case__pic_rounded">
+                </div>
+            </figure>
         </div>
 
         <div class="case__text-box">
