add final results and final blocks to resale

--- a/cases/resale.html
+++ b/cases/resale.html
@@ -35,6 +35,7 @@
             <li class="toc__item"><a href="#ideas-and-sketches">Early Ideas and Sketches</a></li>
             <li class="toc__item"><a href="#design">Design</a></li>
             <li class="toc__item"><a href="#results">Results and Impact</a></li>
+            <li class="toc__item"><a href="#next">What's Next?</a></li>
         </ol>
     </nav>
 
@@ -314,7 +315,7 @@
         
         <div class="case__text-box">
             <p class="case__text">
-                Even though we still didn’t have a final list of the data we needed to collect in the Withdrawal Request form, <span class="bold">I put together a working prototype</span> with a placeholder set of fields so we could test the full resale experience end-to-end. 
+                Even though we still didn’t have a final list of the data we needed to collect in the Withdrawal Request form, <strong class="bold">I put together a working prototype</strong> with a placeholder set of fields so we could test the full resale experience end-to-end. 
             </p>
         </div>
 
@@ -327,7 +328,7 @@
         
         <div class="case__text-box">
             <p class="case__text">
-                <span class="bold">We ran a small round of user testing</span> — made a few tweaks based on feedback — and then I focused on filling in all the missing pieces: edge cases, skeleton screens, error states, Arabic localisation, Android version, everything. 
+                <strong class="bold">We ran a small round of user testing</strong> — made a few tweaks based on feedback — and then I focused on filling in all the missing pieces: edge cases, skeleton screens, error states, Arabic localisation, Android version, everything. 
             </p>
         </div>
 
@@ -341,7 +342,7 @@
             </p>
         </div>
 
-        <div class="--form case_container_m">
+        <div class="--form case__container_m">
             <figure class="--form__container">
                 <div class="--form__item">
                     <img src="/img/cases/resale/form_1.webp" alt="" class="case__pic case__pic_rounded">
@@ -355,10 +356,44 @@
             </figure>
         </div>
 
-        <div class="case__text-box">
+        <div class="--results case__text-box">
             <h2 class="case__h2" id="results">Results and <span class="alt-font">Impact</span></h2>
             <p class="case__text">
                 Even in the first three months after launch, we saw a real impact. But over time, it became clear that Resale was even more significant than we expected — it has grown into a completely new business stream.
+            </p>
+            <ul class="--results__impact metrics">
+                <li class="--results__metric metrics__item">
+                    <p class="metrics__number" aria-labelledby="revenue">+23%</p>
+                    <p id="revenue" class="case__text">Monthly revenue boost per event with Resale enabled</p>
+                </li>
+                <li class="--results__metric metrics__item">
+                    <p class="metrics__number" aria-labelledby="traffic">+38%</p>
+                    <p id="traffic" class="case__text">Increase in app traffic since the launch of anti-scalping features (Smart Tickets, Transfer, Resale)</p>
+                </li>
+            </ul>
+            <p class="case__text">
+                <strong class="bold">More importantly, we kept resale ethical.</strong> Thanks to price caps and security features, people were using it mainly when they genuinely couldn't attend an event — not to make money.
+            </p>
+            <p class="case__text">
+                Average resale markup was only 45%, way lower than the typical 300% you see on other platforms. As a result
+            </p>
+            <ul class="case__text-list">
+                <li><strong class="bold">Fans</strong> got fair access to tickets.</li>
+                <li><strong class="bold">Organizers</strong> keep control customer experience.</li>
+                <li><strong class="bold">Artists</strong> stayed connected to their real fans, not scalpers.</li>
+            </ul>
+            <p class="case__text">
+                For Platinumlist, this wasn’t just a new feature — it was the beginning of a new chapter. By bridging the primary and secondary markets, we created a unified ecosystem that truly sets us apart.
+            </p>
+        </div>
+
+        <div class="case__text-box">
+            <h2 class="case__h2" id="next">What's <span class="alt-font">Next</span>?</h2>
+            <p class="case__text">
+                The next big move is to build a native wallet inside the app — so users can keep their resale earnings and spend them on more events and experiences within Platinumlist.
+            </p>
+            <p class="case__text">
+                But that’s a story for another time…
             </p>
         </div>
 
