--- a/cases/resale.html
+++ b/cases/resale.html
@@ -56,7 +56,7 @@
                     <img src="/img/cases/resale/intro_2.jpg" alt="">
                 </div>
                 <div class="intro__pic --intro__pic">
-                    <video class="--intro__video" autoplay muted>
+                    <video class="--intro__video" autoplay muted loop>
                         <source src="/img/resale.mp4" type="video/mp4">
                     </video>
                 </div>
