--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -48,6 +48,16 @@
                 <h1 class="intro__h">Improving sales funnel through ticket flow</h1>
                 <div class="intro__deck">!!!! Design a full resale feature flow from scratch to help users resell tickets fairly and intuitively</div>
             </div>
+            <div class="intro__hero --intro">
+                <div class="--intro__video">
+                    <video class="" autoplay muted loop>
+                        <source src="/img/ticket-select.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="--intro__site">
+                    <img src="/img/cases/funnel/intro.webp" alt="" class="intro__pic">
+                </div>
+            </div>
         </section>
 
         <div class="case__summary">
