--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -104,6 +104,10 @@
                 What I didn’t expect was just how massive the funnel was—from the event page all the way to the final success screen. But the most complex part? Ticket selection. That’s where this case study mostly focuses. 
             </p>
         </div>
+
+        <figure class="case__container_l --map">
+            <img class="case__pic case__pic_rounded --map__pic" src="/img/cases/funnel/funnel-map.webp" alt="">
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
