add what we had section

--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -121,6 +121,18 @@
                 I kicked things off by breaking down the current flow. Internally, we split events into two main types: "concerts" (like live shows, festivals, temporary exhibitions) and "attractions" (ongoing stuff like safaris, museums, theaters, etc.).
             </p>
         </div>
+
+        <figure class="--old-select case__container_l">
+            <div class="--old-select__container">
+                <div class="--old-select__col">
+                    <img src="/img/cases/funnel/old-select_1.webp" alt="" class="case__pic case__pic_rounded_s">
+                </div>
+                <div class="--old-select__col">
+                    <img src="/img/cases/funnel/old-select_2.webp" alt="" class="case__pic case__pic_rounded_s">
+                </div>
+            </div>
+            <figcaption class="case__caption">How it was when I came to Platinumlist</figcaption>
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
@@ -130,6 +142,10 @@
                 Plus, we had a ton of legacy logic and one-off requests from organizers—many of which contradicted each other.
             </p>
         </div>
+
+        <figure class="--mess case__container_l">
+            <img src="/img/cases/funnel/mess.webp" alt="" class="case__pic case__pic_rounded">
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
