add responsive and flow parts. Finish the first iteration

--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -265,12 +265,22 @@
                 Moreover I fixed various little things throughout the whole tunnel, refreshed the success page, created several prototypes, and—for the first time in the company—built full responsive designs for all screen sizes.
             </p>
         </div>
+
+        <figure class="--responsive case__container_m">
+            <img src="/img/cases/funnel/responsive.webp" alt="" class="case__pic case__pic_rounded">
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
                 To wrap up this phase, I documented the full funnel and shared a clickable map of all sections, along with ideas for what to do next.
             </p>
         </div>
+
+        <figure class="--flow-map case__container_l">
+            <div class="--flow-map__container">
+                <img src="/img/cases/funnel/flow-map.webp" alt="" class="case__pic case__pic_rounded">
+            </div>
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
